--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "gulp": "^3.9.1",
     "gulp-bootstrap-configurator": "^0.4.1",
     "gulp-bower": "0.0.13",
+    "gulp-imagemin": "^3.4.0",
     "gulp-inject": "^4.3.0",
     "gulp-notify": "^3.0.0",
     "gulp-ruby-sass": "^2.1.1",
